--- a/themes/default/css/all.less
+++ b/themes/default/css/all.less
@@ -411,8 +411,8 @@ a.socialButton {
     width: 24px;
     height: 24px;
     background-repeat: no-repeat;
-    background-size: cover;
-    background-position: 50px 50%;
+    background-size: 100%;
+    background-position: 50% 50%;
     .opacity(0.4);
 }
 a.socialButton:hover {
