- hide social buttons - darken .resume in widgets

--- a/_layouts/default.htm
+++ b/_layouts/default.htm
@@ -73,7 +73,7 @@
                         <a href="/contato.html" {%if page.categories contains 'contato'%}class="selected" {%endif%} title="O canal mais rápido para falar comigo depois do telefone.">CONTATO</a>
                     </li>
                 </ul>
-                <nav>
+                <nav class="socialButtons">
                     <a target="_blank" class="socialButton twitter" href="http://twitter.com/sidneylimafilho" title="Pensamentos rápidos via Twitter."></a>
                     <a target="_blank" class="socialButton facebook" href="http://www.facebook.com/sidneylimafilho" title="Minha vida social no Facebook."></a>
                     <a target="_blank" class="socialButton linkedin" href="http://www.linkedin.com/in/sidneylimafilho" title="Minha rede profissional no Linkedin."></a>
