Change size cover default

--- a/themes/default/css/all.less
+++ b/themes/default/css/all.less
@@ -348,7 +348,7 @@ section {
         min-height: 32px;
     }
     .title {
-        font: 20px"HelveticaNeueLtCn", Arial, sans-serif;
+        font: 20px"HelveticaNeueBdCn", Arial, sans-serif;
         padding: 5px;
     }
     .excerpt {
