--- a/themes/default/css/all.less
+++ b/themes/default/css/all.less
@@ -333,6 +333,11 @@ section {
     background-position: 50% 50%;
     background-size: 125%;
     background-repeat: no-repeat;
+    > a {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+    }
     a.socialButton {
         right: 5px;
         position: absolute;
