Enable Demographics and Interest Reports in Google Analytics

--- a/_layouts/default.htm
+++ b/_layouts/default.htm
@@ -55,6 +55,7 @@
     })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
     ga('create', 'UA-39703309-1', 'sidneylimafilho.com.br');
+    ga('require', 'displayfeatures');
     ga('send', 'pageview');
     </script>
 
