--- a/_layouts/post.htm
+++ b/_layouts/post.htm
@@ -13,25 +13,59 @@ layout: default
         -->
     </h1>
 
-    <div class="addthis_toolbox addthis_default_style social-buttons">
-        <a class="addthis_button_facebook_like" fb:like:layout="button_count"></a>
-        <a class="addthis_button_linkedin_counter"></a>
-        <a class="addthis_button_tweet"></a>   
-        <a class="addthis_counter addthis_pill_style"></a>
-        <a class="addthis_button_buffer" style="float:right"></a>  
-    </div>
+    <div class='shareaholic-canvas' data-app='share_buttons' data-app-id='6890667'></div>
 
-    <div class="content">{{ content }}</div>
+    <div class="content">
 
-    <div class="addthis_toolbox addthis_default_style social-buttons">
-        <a class="addthis_button_facebook_like" fb:like:layout="button_count"></a>
-        <a class="addthis_button_linkedin_counter"></a>
-        <a class="addthis_button_tweet"></a>                
-        <a class="addthis_counter addthis_pill_style"></a>
-        <a class="addthis_button_buffer" style="float:right"></a>  
+        {{ content }}
+
+        <h2>Você pode gostar também ...</h2>
+        
+        Eu já escrevi sobre esses assuntos 
+        {% capture tagsAsString %}{% for tag in page.tags %}{{ tag | first }},{% endfor %}{% endcapture %}
+        {% assign tags = tagsAsString | split:"," | sort %}    
+        {% for tag in tags %} 
+            {% for post in site.tags[tag] limit:2 %} 
+                {% if post.published %}
+                    <a href="{{ post.url }}" rel="previous" title="{{ post.title }}">aqui</a> onde escrevo sobre "{{ post.excerpt }}"
+                    {% unless forloop.first %} e também {% endunless %} 
+                    .
+                {% endif %} 
+            {% endfor %} 
+        {% endfor %} 
+
     </div>
+   
+
+    <div class='shareaholic-canvas' data-app='share_buttons' data-app-id='6890667'></div>
 
 </article>
+
+<div class="nav-next-prev">
+    <h2>Outros artigos interessantes ...</h2>
+    <div class="previous">
+        {% if page.previous.url %}
+        <a href="{{ page.previous.url }}" rel="previous" title="{{ page.previous.title }}">{{ page.previous.title }}</a>
+        &laquo;&nbsp;
+        {% endif %}
+    </div>
+    <div class="next">
+        {% if page.next.url %}
+        &nbsp;&raquo;
+        <a href="{{ page.next.url }}" rel="next" title="{{ page.next.title }}">{{ page.next.title }}</a>
+        {% endif %}
+    </div>
+
+    <div class="tags">
+        {% if page.tags %} 
+        Conheça artigos com os mesmos assuntos deste:  {% for tag in page.tags %} <strong><a href="/tags.html#{{ tag | downcase | replace:" ","-" | replace:".","" }}">{{ tag }}</a></strong> 
+        {% unless forloop.last %}, {% endunless %} 
+        {% endfor %} 
+        {% endif %}
+    </div>
+</div>
+
+
 {% unless page.no_comments %}
 <div class="comments">
     <h2>O que você achou?</h2>
@@ -62,26 +96,4 @@ layout: default
     </a>
 </div>
 {% endunless %}
-<div class="nav-next-prev">
-    <h2>Você pode gostar também ...</h2>
-    <div class="previous">
-        {% if page.previous.url %}
-        <a href="{{ page.previous.url }}" rel="previous" title="{{ page.previous.title }}">{{ page.previous.title }}</a>
-        &laquo;&nbsp;
-        {% endif %}
-    </div>
-    <div class="next">
-        {% if page.next.url %}
-        &nbsp;&raquo;
-        <a href="{{ page.next.url }}" rel="next" title="{{ page.next.title }}">{{ page.next.title }}</a>
-        {% endif %}
-    </div>
 
-    <div class="tags">
-        {% if page.tags %} 
-        Conheça outros artigos relacionados com:  {% for tag in page.tags %} <strong><a href="/tags.html#{{ tag | downcase | replace:" ","-" | replace:".","" }}">{{ tag }}</a></strong> 
-        {% unless forloop.last %}, {% endunless %} 
-        {% endfor %} 
-        {% endif %}
-    </div>
-</div>
