--- a/_layouts/post.htm
+++ b/_layouts/post.htm
@@ -19,22 +19,21 @@ layout: default
 
         {{ content }}
           
-        {% assign count = 0 %}
+        {% assign count = 1 %}
         {% for tag in page.tags %}             
             {% for post in site.tags[tag] %}                
-                {% if post.published and post.title != page.title and count != 2 %} 
-
-                    {% if count = 0 %} 
-                        <h2>Você pode gostar também ...</h2> 
-                        Recentemente escrevi um post sobre este mesmo assunto com título <a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a>
-                        {% assign count = count + 1 %}
-                    {% endif %}
-                     
-                    {% if count = 1 %} 
-                        e também outro <a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a>
-                    {% endif %}  
-
+                {% if post.published and post.title != page.title and count < 3 %} 
                     
+                    {% if count = 2 %} 
+                        e também outro <a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a>
+                    {% endif %} 
+
+                    {% if count = 1 %} 
+                        <h2>Você pode gostar também ...</h2> 
+                        Recentemente escrevi um post sobre este mesmo assunto com título <a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a>   
+                        {% assign count = 2 %}                     
+                    {% endif %}
+
                 {% endif %} 
 
                 {% if count = 2 %}
