--- a/_layouts/post.htm
+++ b/_layouts/post.htm
@@ -24,12 +24,12 @@ layout: default
             {% for post in site.tags[tag] %}                
                 {% if post.published and post.title != page.title and count < 3 %} 
                     
-                    {% if count = 2 %} 
+                    {% if count == 2 %} 
                         e também outro <a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a>
                         {% assign count = 3 %} 
                     {% endif %} 
 
-                    {% if count = 1 %} 
+                    {% if count == 1 %} 
                         <h2>Você pode gostar também ...</h2> 
                         Recentemente escrevi um post sobre este mesmo assunto com título <a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a>   
                         {% assign count = 2 %}                     
@@ -37,7 +37,7 @@ layout: default
 
                 {% endif %} 
 
-                {% if count = 2 %}
+                {% if count == 2 %}
                     <p>Espero que goste.</p>
                 {% endif %} 
             {% endfor %}             
