Modified   _layouts/default.htm

--- a/_layouts/default.htm
+++ b/_layouts/default.htm
@@ -147,7 +147,7 @@
   </banner>
   <section style="
     background: none;
-    background-color: rgb(3, 77, 71);
+    background-color: rgb(5, 64, 87);
     height: 171px;
     padding: 30px 0px;
 ">
@@ -155,7 +155,7 @@
     clear: both;
 ">
       <div style="float:left">
-        <img   src="/themes/default/img/desenvolvedoragil/bookcover-3d.png">
+        <img src="/themes/default/img/desenvolvedoragil/bookcover-3d.png">
       </div>
       <div style="float:left;color: white;width: 80%;/* margin-left: 10PX; */">
         <!-- Begin MailChimp Signup Form -->
@@ -165,8 +165,16 @@
             <span>Um livro que irá mexer com suas crenças, seu ego, suas certezas e mostrará que agilidade é sim coisa de desenvolvedor, quer dizer, só dos bons.</span>
             <br />
             <br />
+            <div class="paywithsocial" style="display:block">
+              <a href="//twitter.com/intent/tweet?text=Pessoal,%20baixei%20o%20livro%20%22O%20Desenvolvedor%20%C3%81gil%22%20do%20@sidneylimafilho,%20totalmente%20de%20gra%C3%A7a.%20%23show%20%23corram%20-%3E%20http://sidneylimafilho.com.br/" id="btn_1_e73bcaefaac53c7e939de1cf98f980a5" style="padding:10px; background-color:#2e82bc; color:white" target="_blank">
+                <span class="text">Baixe com Twitter</span>
+              </a>
+              <a class="css-button style-1" href="http://www.facebook.com/sharer/sharer.php?u=http://sidneylimafilho.com.br/?src=facebook" id="btn_1_bf79c71f4445cbf252ea644d6a17684c" style="padding:10px; background-color:#005580; color:white" target="_blank">
+                <span class="text">Baixe com Facebook</span>
+              </a>
 
-            <div class="mc-field-group">
+            </div>
+            <div class="mc-field-group" style="display:none">
 
               <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" style="
     float: left;
@@ -180,13 +188,12 @@
               <input type="submit" value="Baixar Parte 1" name="subscribe" id="mc-embedded-subscribe" class="button" style="
     display: block;  
     font-size: 28px;  
-    font-weight: 700;  text-transform: uppercase;  color: #fffeff;  background-color: #faab1f;  
-    /* border-bottom: 3px solid #e59520; */  
-    /* border-radius: 4px; */  
+    font-weight: 700;  text-transform: uppercase;  color: #fffeff;  background-color: #FA5C1F;  
+
     padding: 4px 10px 4px;  text-align: center;  text-decoration: none;  
     text-shadow: 0px 2px 1px #A65600;      
     border: 0px solid transparent;
-    /* margin-left: -200px; */
+
     position: absolute;
     right: 0px;
     margin-top: 0px;
@@ -200,7 +207,10 @@
             <div class="clear"></div>
           </form>
         </div>
-
+<script type="text/javascript">$(".paywithsocial").click(function(){
+    $(".mc-field-group").show();
+    $(this).hide();
+});</script>
         <!--End mc_embed_signup-->
 
       </div>
