--- a/_layouts/default.htm
+++ b/_layouts/default.htm
@@ -176,7 +176,7 @@
             </div>
             <div class="mc-field-group" style="display:none">
 
-              <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" style="
+              <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Digite aqui para qual e-mail enviar você quer receber o livro." style="
     float: left;
     padding: 3px 10px 3px;
     display: block;  
