Modified   _layouts/default.htm

--- a/_layouts/default.htm
+++ b/_layouts/default.htm
@@ -165,7 +165,7 @@
             <span>Um livro que irá mexer com suas crenças, seu ego, suas certezas e mostrará que agilidade é sim coisa de desenvolvedor, quer dizer, só dos bons.</span>
             <br />
             <br />
-            <div class="paywithsocial" style="display:block">
+            <div class="paywithsocial" style="display:none">
               <a href="//twitter.com/intent/tweet?text=Pessoal,%20baixei%20o%20livro%20%22O%20Desenvolvedor%20%C3%81gil%22%20do%20@sidneylimafilho,%20totalmente%20de%20gra%C3%A7a.%20%23show%20%23corram%20-%3E%20http://sidneylimafilho.com.br/" id="btn_1_e73bcaefaac53c7e939de1cf98f980a5" style="padding:10px; background-color:#2e82bc; color:white" target="_blank">
                 <span class="text">Baixe com Twitter</span>
               </a>
@@ -174,7 +174,7 @@
               </a>
 
             </div>
-            <div class="mc-field-group" style="display:none">
+            <div class="mc-field-group" style="display:block">
 
               <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Digite aqui para qual e-mail enviar você quer receber o livro." style="
     float: left;
