Modified   _layouts/default.htm

--- a/_layouts/default.htm
+++ b/_layouts/default.htm
@@ -176,7 +176,8 @@
             </div>
             <div class="mc-field-group" style="display:block">
 
-              <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Digite aqui para qual e-mail enviar você quer receber o livro." style="
+              <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL"
+               placeholder="Digite aqui o seu e-mail que deseja receber o livro." style="
     float: left;
     padding: 3px 10px 3px;
     display: block;  
