Modified   _layouts/default.htm

--- a/_layouts/default.htm
+++ b/_layouts/default.htm
@@ -177,7 +177,7 @@
             <div class="mc-field-group" style="display:block">
 
               <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL"
-               placeholder="Digite aqui o seu e-mail que deseja receber o livro." style="
+               placeholder="Digite aqui o seu e-mail onde deseja receber o livro." style="
     float: left;
     padding: 3px 10px 3px;
     display: block;  
