--- a/_layouts/default.htm
+++ b/_layouts/default.htm
@@ -43,15 +43,16 @@
   <!-- Google Analytics -->
   <script>
   (function(i, s, o, g, r, a, m) {
-    i['GoogleAnalyticsObject'] = r;
+    i.GoogleAnalyticsObject = r;
     i[r] = i[r] || function() {
-      (i[r].q = i[r].q || []).push(arguments)
-    }, i[r].l = 1 * new Date();
-    a = s.createElement(o),
+      (i[r].q = i[r].q || []).push(arguments);
+    };
+    i[r].l = 1 * new Date();
+    a = s.createElement(o);
     m = s.getElementsByTagName(o)[0];
     a.async = 1;
     a.src = g;
-    m.parentNode.insertBefore(a, m)
+    m.parentNode.insertBefore(a, m);
   })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
   ga('create', 'UA-39703309-1', 'sidneylimafilho.com.br');
@@ -145,20 +146,14 @@
       </div>
     </div>
   </banner>
-  <section style="
-    background: none;
-    background-color: rgb(5, 64, 87);
-    height: 171px;
-    padding: 30px 0px;
-">
-    <div class="wrapper" style="
-    clear: both;
-">
+  <!-- 
+  <section style="    background: none;    background-color: rgb(5, 64, 87);    height: 171px;    padding: 30px 0px;">
+    <div class="wrapper" style="    clear: both;">
       <div style="float:left">
         <img src="/themes/default/img/desenvolvedoragil/bookcover-3d.png">
       </div>
       <div style="float:left;color: white;width: 80%;/* margin-left: 10PX; */">
-        <!-- Begin MailChimp Signup Form -->
+        
         <div id="mc_embed_signup">
           <form action="//sidneylimafilho.us8.list-manage.com/subscribe/post?u=fc65ff2b63c5213579f502cd1&amp;id=03f073a79c" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate="">
             <h2 style="    color: white;">O Desenvolvedor Ágil</h2>
@@ -176,47 +171,27 @@
             </div>
             <div class="mc-field-group" style="display:block">
 
-              <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL"
-               placeholder="Digite aqui o seu e-mail onde deseja receber o livro." style="
-    float: left;
-    padding: 3px 10px 3px;
-    display: block;  
-    font-size: 16px;  font-weight: 700;  text-transform: uppercase;
-    width: 697px;
-    height: 30px;
-    font-family: &quot;HelveticaNeueBdCn&quot;,&quot;HelveticaNeueW01-77BdCn 692722&quot;,Helvetica,sans-serif;
-">
-              <input type="submit" value="Baixar Parte 1" name="subscribe" id="mc-embedded-subscribe" class="button" style="
-    display: block;  
-    font-size: 28px;  
-    font-weight: 700;  text-transform: uppercase;  color: #fffeff;  background-color: #FA5C1F;  
-
-    padding: 4px 10px 4px;  text-align: center;  text-decoration: none;  
-    text-shadow: 0px 2px 1px #A65600;      
-    border: 0px solid transparent;
-
-    position: absolute;
-    right: 0px;
-    margin-top: 0px;
-    font-family: &quot;HelveticaNeueBdCn&quot;,&quot;HelveticaNeueW01-77BdCn 692722&quot;,Helvetica,sans-serif;
-">
+              <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Digite aqui o seu e-mail onde deseja receber o livro." style="    float: left;    padding: 3px 10px 3px;    display: block;      font-size: 16px;  font-weight: 700;  text-transform: uppercase;    width: 697px;    height: 30px;    font-family: &quot;HelveticaNeueBdCn&quot;,&quot;HelveticaNeueW01-77BdCn 692722&quot;,Helvetica,sans-serif;">
+              <input type="submit" value="Baixar Parte 1" name="subscribe" id="mc-embedded-subscribe" class="button" style="    display: block;      font-size: 28px;      font-weight: 700;  text-transform: uppercase;  color: #fffeff;  background-color: #FA5C1F;      padding: 4px 10px 4px;  text-align: center;  text-decoration: none;     text-shadow: 0px 2px 1px #A65600;          border: 0px solid transparent;    position: absolute;    right: 0px;    margin-top: 0px;    font-family: &quot;HelveticaNeueBdCn&quot;,&quot;HelveticaNeueW01-77BdCn 692722&quot;,Helvetica,sans-serif;">
             </div>
-            <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+            
             <div style="position: absolute; left: -5000px;">
               <input type="text" name="b_fc65ff2b63c5213579f502cd1_03f073a79c" tabindex="-1" value="">
             </div>
             <div class="clear"></div>
           </form>
         </div>
-<script type="text/javascript">$(".paywithsocial").click(function(){
-    $(".mc-field-group").show();
-    $(this).hide();
-});</script>
-        <!--End mc_embed_signup-->
+        <script type="text/javascript">
+        $(".paywithsocial").click(function() {
+          $(".mc-field-group").show();
+          $(this).hide();
+        });
+        </script>        
 
       </div>
     </div>
-  </section>
+  </section> 
+  -->
   <section>
     <div class="super">
       <div class="wrapper">
